whitespace bug fixed

--- a/public/css/trades.css
+++ b/public/css/trades.css
@@ -24,7 +24,7 @@
   width: 100%;
   margin-top: 5rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-wrap: wrap;
   padding: 3rem 6rem 3rem 6rem;
 }
